Add: new template and descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -1,41 +1,50 @@
 ---
 layout: default
-title: About - Leandro Stival
-description: Leandro Stival - Ph.D. in Computer Science specializing in Self-Supervised Learning
-keywords: machine learning, deep learning, computer vision, video colorization, self-supervised learning, research, AI
+title: Research Profile | Leandro Stival
 ---
 <article class="page-content about-page">
-    <div class="about-hero">
-        <div class="profile-image-wrapper">
-            <div class="profile-image-placeholder large" id="profile-toggle">
-                <img src="{{ '/images/profile.jpg' | relative_url }}" alt="Profile" class="profile-image" id="profile-img">
-                <span class="profile-emoji" id="profile-emoji" style="display: none;">🤖</span>
-            </div>
-        </div>
-
-        <div class="about-intro">
-            <h1>About</h1>
-        </div>
-    </div>
-
     <div class="page-body">
-        <h1>About</h1>
-        <p>My name is <strong>Leandro Stival</strong>, and I am a researcher specializing in <strong>artificial intelligence</strong> and <strong>computer science</strong>. I completed my Ph.D. in Computer Science at the University of Campinas (UNICAMP), where I specialized in <strong>deep learning</strong> and <strong>computer vision</strong> applied to <strong>remote sensing</strong> and <strong>video processing</strong>.</p>
-        <p>Throughout my professional journey, I have cultivated expertise in diverse domains of machine learning, with a particular focus on the analysis of <strong>satellite imagery</strong> and <strong>multispectral data</strong> for environmental monitoring and land use classification. I have also worked with data from other domains, including <strong>sports analytics</strong>. In this capacity, I applied AI techniques to analyze football match data. In addition to that, I’ve developed projects involving <strong>video colorization</strong> using deep learning models and worked on <strong>time series analysis</strong> for various applications.</p>
-        <p>I am particularly interested in leveraging AI to address real-world challenges. I find satisfaction in working with data to reveal insights and support decision-making, whether it’s understanding landscapes from space or analyzing patterns on a sport science field.</p>
-        <h2>Current Position</h2>
-        <p><strong>PostDoc Researcher</strong><br>
-        Wageningen University &amp; Research (WUR)<br>
-        Wageningen, Netherlands</p>
-        <h2>Research Focus</h2>
-        <p>My research focuses on advancing <strong>self-supervised learning (SSL)</strong> and <strong>representation learning</strong> for complex and multimodal data. I investigate how state-of-the-art SSL methods can be extended to various domains, developing training strategies that capture dependencies and contextual patterns without the need for labeled data.</p>
-        <h2>Fun Facts 🎉</h2>
-        <ul>
-            <li>🎨 I enjoy visualizing embeddings projections (they're basically modern art!)</li>
-            <li>🧠 My ideal debugging companion: coffee ☕ and synthwave music 🎵</li>
-            <li>🚀 Always excited about the next breakthrough in ML (especially if does not require labeled data)</li>
-        </ul>
-        <hr>
-        <p><em>This website was built with Python and a dash of ML magic ✨</em></p>
+        <h1>Research Profile</h1>
+
+        <section class="research-focus">
+            <h2>Current Role and Institutional Context</h2>
+            <p>Leandro Stival is a Postdoctoral Researcher in the Artificial Intelligence Group at Wageningen University
+                & Research (WUR), Netherlands. His research is situated at the intersection of advanced machine learning
+                and environmental science, with a primary focus on developing scalable, self-supervised representation
+                learning frameworks for multimodal spatiotemporal data.</p>
+        </section>
+
+        <section class="scientific-narrative">
+            <h2>Research Methodologies and Scientific Inquiries</h2>
+            <p>My work investigates how high-dimensional, unlabeled data from Satellite Imagery (Remote Sensing), Video,
+                and Time Series can be utilized to build generalizable foundation models. I employ techniques from
+                contrastive learning, masked autoencoders, space state models and generative modeling to autonomously
+                discover structural patterns in Earth observation data.</p>
+            <p>Key scientific questions I address include:</p>
+            <ul>
+                <li>How can self-supervised learning capture long-range temporal dependencies in irregular environmental
+                    time series?</li>
+                <li>To what extent can cross-modal alignment between multispectral and spatial data improve
+                    representation robustness?</li>
+                <li>How can we design domain-agnostic architectures that generalize across diverse geographical regions
+                    and sensor types?</li>
+            </ul>
+        </section>
+
+        <section class="academic-bio">
+            <h2>Academic Biography</h2>
+            <p>Leandro Stival earned his Ph.D. in Computer Science from the University of Campinas (UNICAMP), Brazil,
+                where his doctoral research focused on self-supervised deep learning and computer vision applied to
+                video colorization and spatiotemporal analysis. During his doctoral studies, he conducted a research
+                period at Wageningen University & Research, focusing on remote sensing applications. His academic
+                background is characterized by a strong foundation in computer science, specifically in digital signal
+                processing, graph theory, and neural network architectures.</p>
+            <p>Throughout his career, he has published in high-impact venues such as the <em>ISPRS Journal of
+                    Photogrammetry and Remote Sensing</em> and <em>PLOS ONE</em>. His research spans multiple
+                application domains, including change detection on earth observation, natural video processing, and
+                sports analytics, demonstrating a commitment to interdisciplinary AI. Currently, he
+                contributes to the development of AI-driven solutions for Earth observation, aiming to bridge the gap
+                between theoretical machine learning and practical environmental monitoring challenges.</p>
+        </section>
     </div>
 </article>
