--- a/cv/index.html
+++ b/cv/index.html
@@ -1,91 +1,77 @@
 ---
 layout: default
-title: CV - Leandro Stival
-description: Leandro Stival - Ph.D. in Computer Science specializing in Self-Supervised Learning
-keywords: machine learning, deep learning, computer vision, video colorization, self-supervised learning, research, AI
+title: Curriculum Vitae | Leandro Stival
 ---
 <article class="page-content">
-    <header class="page-header">
-        <h1>CV</h1>
-    </header>
-
     <div class="page-body">
         <h1>Curriculum Vitae</h1>
-        <div style="text-align: center; margin: 2rem 0;">
-            <a href="{{ '/images/Leandro_Stival_CV.pdf' | relative_url }}" download="Leandro_Stival_CV.pdf" class="cv-download-btn" style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 1rem 2rem; background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%); color: white; text-decoration: none; border-radius: 9999px; font-weight: 600; font-size: 1.125rem; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); transition: all 0.25s ease;">
-                📥 Download PDF Version
-            </a>
+
+        <div class="cv-download-container" style="text-align: center; margin: 2rem 0;">
+            <a href="{{ '/images/Leandro_Stival_CV.pdf' | relative_url }}" download class="btn">Download CV (PDF)</a>
         </div>
 
-        <hr>
-        <h2>👤 Personal Information</h2>
-        <p><strong>Name:</strong> Leandro Stival<br>
-        <strong>Position:</strong> Postdoctoral Researcher in Artificial Intelligence<br>
-        <strong>Institution:</strong> Wageningen University &amp; Research (WUR)<br>
-        <strong>Location:</strong> Wageningen, Netherlands<br>
-        <strong>Email:</strong> leandro.stival@wur.nl</p>
-        <hr>
-        <h2>💼 Professional Experience</h2>
-        <h3>Postdoctoral Researcher</h3>
-        <p><strong>Wageningen University &amp; Research (WUR)</strong> | Wageningen, Netherlands | <em>Present</em><br>
-        <em>Artificial Intelligence Group</em>
-        - Conducting research on <strong>Self-Supervised Learning</strong> applied to <strong>Remote Sensing</strong> and <strong>Time Series</strong>.
-        - Bridging the gap between cutting-edge machine learning techniques and practical applications in environmental monitoring.
-        - Collaborating with interdisciplinary teams to develop scalable and interpretable AI models.</p>
-        <h3>Ph.D. Researcher</h3>
-        <p><strong>University of Campinas (UNICAMP)</strong> | Campinas, Brazil<br>
-        <em>Institute of Computing</em>
-        - Specialized in <strong>Computer Vision</strong>, <strong>Graphs &amp; Networks</strong>, and <strong>Time Series Analysis</strong>.
-        - Developing advanced techniques for <strong>Video Colorization</strong> using self-attention mechanisms and diffusion models.
-        - Investigated training loss functions and architectures for improved video colorization performance.</p>
-        <hr>
-        <h2>🎓 Education</h2>
-        <h3>Ph.D. in Computer Science</h3>
-        <p><strong>University of Campinas (UNICAMP)</strong> | Brazil
-        - <strong>Focus:</strong> Deep Learning, Computer Vision, Self-Supervised Learning.
-        - <strong>Key Research:</strong> Video Colorization, Spatio-Temporal Data Analysis.</p>
-        <h3>Sandwich Doctorate Period</h3>
-        <p><strong>Wageningen University &amp; Research (WUR)</strong> | Netherlands
-        - Focused on Remote Sensing and Deep Learning applications during doctoral studies.</p>
-        <hr>
-        <h2>🔬 Research Skills</h2>
-        <h3>Machine Learning &amp; AI</h3>
-        <ul>
-            <li><strong>Deep Learning:</strong> PyTorch, Diffusion Models, Attention Mechanisms, State-Space Models</li>
-            <li><strong>Computer Vision:</strong> Video Colorization, Object Detection, Segmentation</li>
-            <li><strong>Self-Supervised Learning:</strong> Contrastive Learning, Representation Learning, Masked Modeling</li>
-            <li><strong>Remote Sensing:</strong> Multispectral Image Analysis, Semantic Processing</li>
-        </ul>
-        <h3>Tools &amp; Technologies</h3>
-        <ul>
-            <li><strong>Languages:</strong> Python, C#</li>
-            <li><strong>Frameworks:</strong> PyTorch, Keras, scikit-learn</li>
-            <li><strong>Tools:</strong> Git, LaTeX</li>
-            <li><strong>Data Analysis:</strong> Pandas, NumPy, Matplotlib</li>
-        </ul>
-        <hr>
-        <h2>🌍 Languages</h2>
-        <ul>
-            <li><strong>Portuguese:</strong> Native</li>
-            <li><strong>English:</strong> Fluent</li>
-            <li><strong>Dutch:</strong> Basic</li>
-        </ul>
-        <hr>
-        <h2>📫 Contact</h2>
-        <ul>
-            <li><strong>Email:</strong> <a href="mailto:leandro.stival@wur.nl">leandro.stival@wur.nl</a></li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/lstival">github.com/lstival</a></li>
-            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/leandro-stival-63651ba0">linkedin.com/in/leandro-stival-63651ba0</a></li>
-            <li><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=Bw3dn34AAAAJ&amp;hl=en">Profile</a></li>
-            <li><strong>ResearchGate:</strong> <a href="https://www.researchgate.net/profile/Leandro-Stival-3">Profile</a></li>
-            <li><strong>ORCID:</strong> <a href="https://orcid.org/0000-0002-3379-6813">0000-0002-3379-6813</a></li>
-        </ul>
-        <hr>
-        <p><em>Last updated: December 2025</em></p>
-        <div style="text-align: center; margin: 2rem 0;">
-            <a href="{{ '/images/Leandro_Stival_CV.pdf' | relative_url }}" download="Leandro_Stival_CV.pdf" class="cv-download-btn" style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 1rem 2rem; background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%); color: white; text-decoration: none; border-radius: 9999px; font-weight: 600; font-size: 1.125rem; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); transition: all 0.25s ease;">
-                📥 Download PDF Version
-            </a>
-        </div>
+        <section class="cv-section">
+            <h2>Current Position</h2>
+            <p><strong>Postdoctoral Researcher in Artificial Intelligence</strong><br>
+                Wageningen University & Research (WUR), Netherlands<br>
+                <em>Artificial Intelligence Group, 2024 – Present</em>
+            </p>
+            <ul>
+                <li>Researching self-supervised representation learning for remote sensing and time series.</li>
+                <li>Developing multimodal foundation models for Spatiotemporal Data.</li>
+                <li>Collaborating on interdisciplinary AI projects for environmental monitoring.</li>
+            </ul>
+        </section>
+
+        <section class="cv-section">
+            <h2>Education</h2>
+            <p><strong>Ph.D. in Computer Science</strong><br>
+                University of Campinas (UNICAMP), Brazil<br>
+                <em>Focus: Deep Learning, Computer Vision, and Spatiotemporal Data.</em>
+            </p>
+
+            <p><strong>Sandwich Doctorate Period</strong><br>
+                Wageningen University & Research, Netherlands<br>
+                <em>Research focus on Remote Sensing applications.</em>
+            </p>
+        </section>
+
+        <section class="cv-section">
+            <h2>Teaching Experience</h2>
+            <p><strong>Teacher</strong>, AIN30306 - Artificial Intelligence in Science and Engineering, Wageningen
+                University & Research, 2025</p>
+            <p><strong>Mentorship</strong>, Students, University of Campinas and Wageningen University & Research, 2024
+                – Present
+            </p>
+            <p><strong>Teaching Assistant</strong>, MC102 - Algorithms & MC920 - Image Processing, University of
+                Campinas, 2022 – 2023</p>
+        </section>
+
+        <section class="cv-section">
+            <h2>Research Expertise</h2>
+            <p><strong>Core Methods:</strong> Self-Supervised Learning (Contrastive, Masked Modeling), Representation
+                Learning, Multimodal Alignment, Spatiotemporal Analysis, Computer Vision.</p>
+            <p><strong>Application Domains:</strong> Remote Sensing, Earth Observation, Video Understanding, Sports
+                Analytics, Time Series Forecasting.</p>
+            <p><strong>Technical Stack:</strong> Python, PyTorch, CUDA, scikit-learn, Git, LaTeX.</p>
+        </section>
+
+        <section class="cv-section">
+            <h2>Selected Publications</h2>
+            <p>For a full list of publications, please refer to the <a
+                    href="{{ '/publications/' | relative_url }}">Publications</a> page or <a
+                    href="https://scholar.google.com/citations?user=Bw3dn34AAAAJ&hl=en">Google Scholar</a>.</p>
+        </section>
+
+        <section class="cv-section">
+            <h2>Professional Service</h2>
+            <ul>
+                <li>Reviewer for international conferences and journals in Computer Vision and Remote Sensing.</li>
+            </ul>
+        </section>
+
+        <footer class="cv-footer" style="margin-top: 3rem; font-size: 0.9rem; color: #666;">
+            <p>Last updated: January 2026</p>
+        </footer>
     </div>
 </article>
