--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Leandro Stival - Ph.D. in Computer Science
-description: Leandro Stival - Ph.D. in Computer Science specializing in Self-Supervised Learning
-keywords: machine learning, deep learning, computer vision, video colorization, self-supervised learning, research, AI
+title: Leandro Stival | AI Researcher
+description: Personal website of Leandro Stival, researcher specializing in Self-Supervised Learning and Remote Sensing.
 ---
 <div class="home-hero">
     <div class="hero-content">
@@ -15,28 +14,21 @@ keywords: machine learning, deep learning, computer vision, video colorization, 
 
             <div class="profile-info">
                 <h1 class="profile-name">Leandro Stival</h1>
-                <p class="profile-position">Ph.D. in Computer Science</p>
-                <p class="profile-location">📍 Wageningen, Netherlands</p>
+                <p class="profile-position">Postdoctoral Researcher in Artificial Intelligence</p>
+                <p class="profile-institution">Wageningen University & Research</p>
+                <p class="profile-location">Wageningen, Netherlands</p>
 
                 <div class="profile-links">
-                    <a href="mailto:leandro.stival@wur.nl" class="profile-link" target="_blank" rel="noopener noreferrer">
-                        Email
-                    </a>
-                    <a href="https://github.com/lstival" class="profile-link" target="_blank" rel="noopener noreferrer">
-                        GitHub
-                    </a>
-                    <a href="https://scholar.google.com/citations?user=Bw3dn34AAAAJ&amp;hl=en" class="profile-link" target="_blank" rel="noopener noreferrer">
-                        Google Scholar
-                    </a>
-                    <a href="https://www.linkedin.com/in/leandro-stival-63651ba0" class="profile-link" target="_blank" rel="noopener noreferrer">
-                        LinkedIn
-                    </a>
-                    <a href="https://www.researchgate.net/profile/Leandro-Stival-3" class="profile-link" target="_blank" rel="noopener noreferrer">
-                        ResearchGate
-                    </a>
-                    <a href="https://orcid.org/0000-0002-3379-6813" class="profile-link" target="_blank" rel="noopener noreferrer">
-                        ORCID
-                    </a>
+                    <a href="mailto:leandro.stival@wur.nl" class="profile-link" target="_blank"
+                        rel="noopener noreferrer">Email</a>
+                    <a href="https://scholar.google.com/citations?user=Bw3dn34AAAAJ&amp;hl=en" class="profile-link"
+                        target="_blank" rel="noopener noreferrer">Google Scholar</a>
+                    <a href="https://github.com/lstival" class="profile-link" target="_blank"
+                        rel="noopener noreferrer">GitHub</a>
+                    <a href="https://www.linkedin.com/in/leandro-stival-63651ba0" class="profile-link" target="_blank"
+                        rel="noopener noreferrer">LinkedIn</a>
+                    <a href="https://orcid.org/0000-0002-3379-6813" class="profile-link" target="_blank"
+                        rel="noopener noreferrer">ORCID</a>
                 </div>
             </div>
         </div>
@@ -45,23 +37,35 @@ keywords: machine learning, deep learning, computer vision, video colorization, 
 
 <article class="page-content home-about">
     <div class="page-body">
-        <h1>About</h1>
-        <p>My name is <strong>Leandro Stival</strong>, and I am a researcher specializing in <strong>artificial intelligence</strong> and <strong>computer science</strong>. I completed my Ph.D. in Computer Science at the University of Campinas (UNICAMP), where I specialized in <strong>deep learning</strong> and <strong>computer vision</strong> applied to <strong>remote sensing</strong> and <strong>video processing</strong>.</p>
-        <p>Throughout my professional journey, I have cultivated expertise in diverse domains of machine learning, with a particular focus on the analysis of <strong>satellite imagery</strong> and <strong>multispectral data</strong> for environmental monitoring and land use classification. I have also worked with data from other domains, including <strong>sports analytics</strong>. In this capacity, I applied AI techniques to analyze football match data. In addition to that, I’ve developed projects involving <strong>video colorization</strong> using deep learning models and worked on <strong>time series analysis</strong> for various applications.</p>
-        <p>I am particularly interested in leveraging AI to address real-world challenges. I find satisfaction in working with data to reveal insights and support decision-making, whether it’s understanding landscapes from space or analyzing patterns on a sport science field.</p>
-        <h2>Current Position</h2>
-        <p><strong>PostDoc Researcher</strong><br>
-        Wageningen University &amp; Research (WUR)<br>
-        Wageningen, Netherlands</p>
-        <h2>Research Focus</h2>
-        <p>My research focuses on advancing <strong>self-supervised learning (SSL)</strong> and <strong>representation learning</strong> for complex and multimodal data. I investigate how state-of-the-art SSL methods can be extended to various domains, developing training strategies that capture dependencies and contextual patterns without the need for labeled data.</p>
-        <h2>Fun Facts 🎉</h2>
+        <h1>Research Identity</h1>
+        <p>I am a Postdoctoral Researcher at Wageningen University & Research (WUR), where my work focuses on advancing
+            <strong>Self-Supervised Learning (SSL)</strong> and <strong>Representation Learning</strong> for complex,
+            multimodal, and spatiotemporal data.</p>
+
+        <p>My research addresses the challenge of extracting meaningful information from large-scale unlabeled datasets,
+            with a particular emphasis on <strong>Remote Sensing</strong> and <strong>Earth Observation</strong>. I
+            develop methods that leverage temporal dependencies and cross-modal relationships to build robust,
+            generalizable foundation models for environmental monitoring, agriculture, and climate science.</p>
+
+        <h2>Research Interests</h2>
         <ul>
-            <li>🎨 I enjoy visualizing embeddings projections (they're basically modern art!)</li>
-            <li>🧠 My ideal debugging companion: coffee ☕ and synthwave music 🎵</li>
-            <li>🚀 Always excited about the next breakthrough in ML (especially if does not require labeled data)</li>
+            <li><strong>Self-Supervised Learning:</strong> Contrastive learning, masked modeling, and generative
+                pre-training for non-textual data.</li>
+            <li><strong>Multimodal Learning:</strong> Integration of multispectral, temporal, and spatial information in
+                unified representation spaces.</li>
+            <li><strong>Spatio-Temporal Modeling:</strong> Capturing long-range dependencies in video and environmental
+                time series.</li>
+            <li><strong>Remote Sensing:</strong> Processing satellite imagery for land-use classification and change
+                detection.</li>
+            <li><strong>Representation Learning:</strong> Enabling autonomous discovery of structure in diverse
+                scientific datasets.</li>
+            <li><strong>Foundation Models:</strong> Developing scalable, domain-agnostic models for Earth observation
+                tasks.</li>
         </ul>
-        <hr>
-        <p><em>This website was built with Python and a dash of ML magic ✨</em></p>
+
+        <div class="cta-section" style="margin-top: 2rem;">
+            <a href="{{ '/publications/' | relative_url }}" class="btn">View Publications</a>
+            <a href="{{ '/cv/' | relative_url }}" class="btn btn-secondary">Curriculum Vitae</a>
+        </div>
     </div>
 </article>
